--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Font Awesome Link -->
+    <script src="https://kit.fontawesome.com/c0c1400471.js" crossorigin="anonymous"></script>
+
+    <!-- Google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- CSS style sheet -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>thread</title>
 </head>
 <body>
-    <h1>Hello brate</h1>
-    <h2>Hello sestro</h2>
+    <h1>Test</h1>
 </body>
 </html>
