--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="style.css">
     <title>thread</title>
 </head>
-<body>
-    <h1>Test</h1>
+
+<body class="container">
+    
 </body>
 </html>
