--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
 </head>
 
 <body class="container">
+    <!-- --------------------------------------------------------------------------------- Header -->
+    <header id="main-header">Header</header>
 
+    <!-- --------------------------------------------------------------------------------- Hero -->
+    <section class="hero">Hero</section>
+
+    <!-- --------------------------------------------------------------------------------- Feauters -->
+    <section class="feauters">Feauters</section>
+
+    <!-- --------------------------------------------------------------------------------- Diversify -->
+    <section class="diversify">Diversify</section>
+
+    <!-- --------------------------------------------------------------------------------- Testemonials -->
+    <section class="testimonials">Testemonials</section>
+
+    <!-- --------------------------------------------------------------------------------- Footer -->
+    <footer id="footer">Footer</footer>
+
+    <!-- --------------------------------------------------------------------------------- JavaScript -->
+    <script src="app.js"></script>
+    
 </body>
 </html>
