--- a/index.html
+++ b/index.html
@@ -20,7 +20,35 @@
 
 <body class="container">
     <!-- --------------------------------------------------------------------------------- Header -->
-    <header id="main-header">Header</header>
+    <header id="main-header">
+        <!-- Logo -->
+        <div class="main-header__logo">
+            <h2>thre<span>ad</span></h2>
+        </div>
+
+        <!-- Navigation -->
+        <nav class="main-header__nav">
+            <!-- Nav Links -->
+            <ul class="main-header__nav--links">
+                <li class="main-header__nav--links__link">Community<a href="#"></a></li>
+                <li class="main-header__nav--links__link">Pricing<a href="#"></a></li>
+                <li class="main-header__nav--links__link">Feauters<a href="#"></a></li>
+            </ul>
+
+            <!-- Registration -->
+            <div class="main-header__nav--registration">
+                <a href="#">Sign In</a>
+                <a href="#">Sign Up</a>
+            </div>
+        </nav>
+
+        <!-- Hamburger -->
+        <div class="hamburger">
+            <div class="hamburger-line"></div>
+            <div class="hamburger-line"></div>
+            <div class="hamburger-line"></div>
+        </div>
+    </header>
 
     <!-- --------------------------------------------------------------------------------- Hero -->
     <section class="hero">Hero</section>
@@ -32,12 +60,12 @@
     <section class="diversify">Diversify</section>
 
     <!-- --------------------------------------------------------------------------------- Testemonials -->
-    <section class="testimonials">Testemonials</section>
+    <section class="testimonials">Testimonials</section>
 
     <!-- --------------------------------------------------------------------------------- Footer -->
     <footer id="footer">Footer</footer>
 
-    <!-- -------------------------------------------------------------------------------- JavaScript -->
+    <!-- --------------------------------------------------------------------------------- JavaScript -->
     <script src="app.js"></script>
     
 </body>
