--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <nav class="main-header__nav">
             <!-- Nav Links -->
             <ul class="main-header__nav--links">
-                <li class="main-header__nav--links__link">Community<a href="#"></a></li>
-                <li class="main-header__nav--links__link">Pricing<a href="#"></a></li>
-                <li class="main-header__nav--links__link">Feauters<a href="#"></a></li>
+                <li class="main-header__nav--links__link"><a href="#">Community</a></li>
+                <li class="main-header__nav--links__link"><a href="#">Pricing</a></li>
+                <li class="main-header__nav--links__link"><a href="#">Feauters</a></li>
             </ul>
 
             <!-- Registration -->
